wip character sheet

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "react-dom": "18.2.0",
     "typescript": "5.1.6",
     "xml-js": "^1.6.11"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.1.0"
   }
 }
